--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --watch 'src/' --exec  ts-node src/index.ts -e ts",
     "start": "node build/index.js",
-    "build": "tsc"
+    "build": " yarn install && tsc"
   },
   "keywords": [],
   "author": "",
