--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.13",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "mongodb": "^6.6.2"
+    "mongodb": "^6.6.2",
+    "swagger-ui-express": "^5.0.0"
   }
 }
